--- a/.github/workflows/run-fetch.yml
+++ b/.github/workflows/run-fetch.yml
@@ -35,6 +35,6 @@ jobs:
 
       - name: Run Fetch Script
         run: |
-          cd dbscripts
-          chmod +x fetch.sh
-          ./fetch.sh "$MYSQL_USER" "$MYSQL_PASSWORD" "$MYSQL_HOST" "$MYSQL_PORT"
+          cd dbscript
+          chmod +x data_fetch.sh
+          ./data_fetch.sh "$MYSQL_USER" "$MYSQL_PASSWORD" "$MYSQL_HOST" "$MYSQL_PORT"
